Crash when scrolling Viewport Shading pop-up #74585

Closed
opened 2020-03-09 20:04:07 +01:00 by Diogo Valadares Reis dos Santos · 9 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GT 710/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-09 13:47, hash: 598ab525da

Short description of error
Whenever viewport shading pop-up can't show everything, scrolling it with the mouse scroll crashes blender

Exact steps for others to reproduce the error

  • Create a layout that doesn't leave much space for Viewport Shading to show everything.
    image.png
  • Scroll with the mouse wheel (notice that you can still scroll it by moving hovering the mouse on the arrows).
**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GT 710/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-09 13:47, hash: `598ab525da` **Short description of error** Whenever viewport shading pop-up can't show everything, scrolling it with the mouse scroll crashes blender **Exact steps for others to reproduce the error** - Create a layout that doesn't leave much space for Viewport Shading to show everything. ![image.png](https://archive.blender.org/developer/F8397886/image.png) - Scroll with the mouse wheel (notice that you can still scroll it by moving hovering the mouse on the arrows).

Added subscriber: @Diogo_Valadares

Added subscriber: @Diogo_Valadares

Added subscribers: @jenkm, @brecht

Added subscribers: @jenkm, @brecht

@jenkm didn't check if this is related to your changes here, but notifying you just in case.

@jenkm didn't check if this is related to your changes here, but notifying you just in case.

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

It's somewhere in d5572eacc5.

This will crash instantly:

WM_event_add_mousemove(but->active->window);

but somewhere else, if revert the line above, it still crashes when quit Blender (after scrolling popover).

@JulianEisel

It's somewhere in d5572eacc5. This will crash instantly: ``` WM_event_add_mousemove(but->active->window); ``` but somewhere else, if revert the line above, it still crashes when quit Blender (after scrolling popover). @JulianEisel
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by dc3ff1db3f

This issue was referenced by dc3ff1db3f6a38a6928cf86304f992656775cdef
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-03-10 11:28:09 +01:00
Member

I did not find any crashes when quitting Blender with my fix. Let me know if it's still there.

I did not find any crashes when quitting Blender with my fix. Let me know if it's still there.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74585
No description provided.