Fix T74585: Crash when scrolling viewport shading pop-up

Was dereferencing NULL pointer. Mistake from d5572eacc595.